--- a/requirements.txt
+++ b/requirements.txt
@@ -3,3 +3,6 @@ requests==2.32.3
 aiohttp==3.10.10
 pytest==8.3.3
 pytest-asyncio==0.24.0
+fastapi==0.115.3
+uvicorn==0.32.0
+python-multipart==0.0.13
